@@ -1,4 +1,5 @@
 0.05
+ - API change: Add 'external_ids' parameter to Object object.
  - API change: Add 'external_ids' parameter to People object.
  - Add ExternalId object.
  - Deprecation of nkcr_aut() method in People object.
